--- a/index.jade
+++ b/index.jade
@@ -4,32 +4,40 @@ block title
     title #{setting.name} - 首页
 
 block content
-    .wrapper
-        .side-content
-            .blog-about
-                h1.blog-name
-                    a(href='/') #{setting.name}
-                h3.blog-desc #{setting.desc}
-            .blog-nav
-                ul
-                    li: a(href='#{url.post}') 文章
-                    li: a(href='#{url.gallery}') 相册
-        .main-content
-            - each post in posts
-                .post
-                    h2.post-title: a(href='#{url.post}/#{post.slug}') #{post.title}
-                    .post-info
-                        a.post-author(href='#{url.user}/#{post.author}')
-                            span.author-avatar(style='background-image: url(#{url.api}#{url.avatar}/#{post.author})')
-                            span.author-name #{post.author}
-                        span.post-date #{post.createDate}
-                        span.post-category
-                            | 收集在
-                            a(href='#{url.category}/#{post.category}') #{post.categoryName}
+    - each post in posts
+        .post
+            h2.post-title: a(href='#{url.post}/#{post.slug}') #{post.title}
+            .post-info
+                a.post-author(href='#{url.user}/#{post.author}')
+                    span.author-avatar(style='background-image: url(#{url.api}#{url.avatar}/#{post.author})')
+                    span.author-name #{post.author}
+                span.post-date #{post.createDate}
+                span.post-category
+                    | 收集在
+                    a(href='#{url.category}/#{post.category}') #{post.categoryName}
 
-                    p.post-excerpt
-                        |!{post.excerpt} ...
-                        a(href='#{url.post}/#{post.slug}') 阅读原文
-                    .post-tags
-                        - each tag in post.tags
-                            a(href='#{url.post}?tag=#{tag}') ##{tag}
+            p.post-excerpt
+                |!{post.excerpt} ...
+                a(href='#{url.post}/#{post.slug}') 阅读原文
+            .post-tags
+                - each tag in post.tags
+                    a(href='#{url.post}?tag=#{tag}') ##{tag}
+    - var i = 1
+    - if (page)
+        .pagination
+            - if (page > 1)
+                a(href='/page/#{page-1}') 上一页
+            - for (; i <= total; i++)
+                - if (page==i)
+                    span #{i}
+                - else
+                    a(href='/page/#{i}') #{i}
+            - if (page < total)
+                a(href='/page/#{page+1}') 下一页
+    - else
+        .pagination
+            - for (; i <= total; i++)
+                a(href='/page/#{i}') #{i}
+            a(href='/page/2') 下一页
+block script
+    script(type='text/javascript', src='#{assets.client}/js/script.js')
