--- a/archive.jade
+++ b/archive.jade
@@ -4,4 +4,43 @@ block title
     title #{setting.name} - 文章列表
 
 block content
-
+    .main-wrapper
+        .category-list
+            p 文章分类
+            ul
+                - each category in categories
+                    li: a(href='#{url.post}?category=#{category.name}') #{category.name} (#{category.count})
+        .post-list
+            .query-title
+                - if (query.tag && !query.category)
+                    p 标签为 #{query.tag} 的文章列表，共 #{total} 条记录。
+                - if (query.category && !query.tag)
+                    p #{query.category} 分类下的文章列表，共 #{total} 条记录。
+                - if (query.tag && query.category)
+                    p 标签为 #{query.tag} 且分类为 #{query.category} 的文章列表，共 #{total} 条记录。
+            ul
+                - each post in posts
+                    li
+                        p.post-date #{post.createDate}
+                        h2: a(href='#{url.post}/#{post.slug}') #{post.title}
+                        p
+                            a.user(href='#{url.user}/#{post.author}')
+                                img(src='#{url.api}/#{url.avatar}/#{post.author}')
+                                | #{post.author}
+                            span.post-cate
+                                | 分类：
+                                a(href='#{url.post}?category=#{post.categoryName}') #{post.categoryName}
+            - var i = 1
+            - if (pageNum > 1)
+                .pagination
+                    - if (query.page > 1)
+                        a(href='#{url.post}?page=#{query.page-1}#{otherQuery}') 上一页
+                    - for (; i <= pageNum; i++)
+                        - if (query.page==i)
+                            span #{i}
+                        - else
+                            a(href='#{url.post}?page=#{i}#{otherQuery}') #{i}
+                    - if (query.page < pageNum)
+                        a(href='#{url.post}?page=#{query.page+1}#{otherQuery}') 下一页
+block script
+    script(type='text/javascript', src='#{assets.client}/js/script.js')
