--- a/post.jade
+++ b/post.jade
@@ -13,7 +13,7 @@ block content
             span.post-date #{post.createDate}
             span.post-category
                 | 收集在
-                a(href='#{url.category}/#{post.category}') #{post.categoryName}
+                a(href='#{url.post}?category=#{post.categoryName}') #{post.categoryName}
 
         .post-content
             |!{post.html}
